[package]
name = "fractal_common"
version = "0.4.0"
edition = "2021"

[build-dependencies]
bindgen = {version = "0.66", optional = true}

[dependencies]
num = ">=0.4"
num-complex = ">=0.4.3"
spfunc = "0.1.0"
rand = ">=0.8.5"
rand_distr = ">=0.4.3"
rayon = ">=1.7.0"
image = "*"
egui = "0.22.0"
ndarray = ">=0.15.6"
derive_more = { version = "0.99.17", features = ["from", "add", "iterator"] }
libc = {version = "0.2.147", optional = true}
serde = { version = "1.0.166", features = ["derive"], optional = true }
num-rational = "0.4.1"
num-traits = "0.2.16"
lazy_static = "1.4.0"
regex = "1.9.6"
poly_solve = { version = "*", path = "../poly_solve" }

[features]
serde = ["dep:serde", "num-complex/serde"]
