[package]
name = "fractal_gui"
version = "0.4.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"], optional = true }
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = { version = ">=0.22.0", features = ["image"] }
egui_file = ">=0.10.2"
egui_dock = ">=0.7.2"
epaint = ">=0.22.0"
seq-macro = "0.3.5"
fractal_core = { version = "*", path = "../core" }
fractal_common = { version = "*", path = "../common" }
fractal_profiles = { version = "*", path = "../profiles" }

[features]
serde = ["dep:serde", "eframe/serde", "epaint/serde", "fractal_core/serde", "fractal_common/serde"]
