[package]
name = "fractal_gui"
version = "0.4.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"], optional = true }
eframe = "0.23"
egui = "0.23"
egui_extras = { version = "0.23", features = ["image"] }
egui_file = "0.11.0"
egui_dock = "0.8"
epaint = "0.23"
seq-macro = "0.3.5"
fractal_core = { version = "*", path = "../core" }
fractal_common = { version = "*", path = "../common" }
fractal_profiles = { version = "*", path = "../profiles" }
libloading = {version = "0.8.1", optional = true}

[features]
serde = ["dep:serde", "eframe/serde", "epaint/serde", "fractal_core/serde", "fractal_common/serde"]
user_profiles = ["dep:libloading"]
