[package]
name = "dynamo_gui"
version = "0.6.0"
edition = "2021"
authors = ["Danny Stoll"]
repository = "https://github.com/dannystoll1/dynamo"
description = "GUI for Fractal Explorer"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1.0.188", features = ["derive"], optional = true }
eframe = "0.23"
egui = "0.23"
egui_extras = { version = "0.23", features = ["image"] }
egui_file = "0.11.0"
egui_dock = "0.8"
epaint = "0.23"
seq-macro = "0.3.5"
dynamo_core = { version = "*", path = "../core" }
dynamo_color = { version = "*", path = "../coloring", features = ["serde"] }
dynamo_common = { version = "*", path = "../common" }
dynamo_profiles = { version = "*", path = "../profiles" }
libloading = {version = "0.8.1", optional = true}
image = "0.24.7"
imageproc = "0.23.0"
itertools = "0.11.0"

[features]
serde = ["dep:serde", "eframe/serde", "epaint/serde", "dynamo_core/serde", "dynamo_common/serde"]
scripting = ["dep:libloading"]
