[package]
name = "fractal_lib"
version = "0.2.0"
edition = "2021"

[dependencies]
num-complex = ">=0.4.3"
ndarray = ">=0.15.6"
image = "*"
eframe = ">=0.21.3"
egui_extras = { version = ">=0.21.0", features = ["image"] }
num = ">=0.4.0"
rand = ">=0.8.5"
rand_distr = ">=0.4.3"
rayon = ">=1.7.0"
epaint = ">=0.21.0"
input-macro = ">=0.2.0"
thread_local = ">=1.1.7"
num_cpus = ">=1.15.0"
derive_more = { version = "0.99.17", features = ["from", "add", "iterator"] }
serde = { version = "1.0.163", features = ["derive"], optional = true }
wasm-bindgen = { version = ">=0.2.84", optional = true }
wasm-bindgen-futures = { version = ">=0.4.30", optional = true }

[features]
serde = ["dep:serde", "eframe/serde", "epaint/serde", "num-complex/serde"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
