[package]
name = "fractal_lib"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Danny Stoll"]
repository = "https://github.com/dannystoll1/fractal-explorer"
description = "A tool for studying discrete time dynamical systems - Core Files"

[dependencies]
num-complex = ">=0.4.3"
ndarray = ">=0.15.6"
image = "*"
eframe = ">=0.22.0"
egui_extras = { version = ">=0.22.0", features = ["image"] }
num = ">=0.4.0"
rand = ">=0.8.5"
rand_distr = ">=0.4.3"
rayon = ">=1.7.0"
epaint = ">=0.22.0"
input-macro = ">=0.2.0"
thread_local = ">=1.1.7"
num_cpus = ">=1.15.0"
derive_more = { version = "0.99.17", features = ["from", "add", "iterator"] }
serde = { version = "1.0.163", features = ["derive"], optional = true }
wasm-bindgen = { version = ">=0.2.84", optional = true }
wasm-bindgen-futures = { version = ">=0.4.30", optional = true }
web-sys = { version = ">=0.3.50", features = ["console"] }
egui_file = ">=0.9.0"
egui_dock = ">=0.6.1"
egui = "0.22.0"

[features]
serde = ["dep:serde", "eframe/serde", "epaint/serde", "num-complex/serde"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
