[package]
name = "fractal_wasm"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Danny Stoll"]
repository = "https://github.com/dannystoll1/fractal-explorer"
description = "A tool for studying discrete time dynamical systems - Web UI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fractal_gui = { path = "../gui"}
web-sys = ">=0.3.63"
eframe = ">=0.22.0"
console_error_panic_hook = "0.1.7"
log = "0.4.18"
wasm-bindgen = ">=0.2.86"
wasm-bindgen-futures = ">=0.4.36"

[lib]
crate-type = ["cdylib", "rlib"]
