[package]
name = "dynamo_app"
version = "1.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { workspace = true }
egui_extras = { workspace = true }
egui_dock = { workspace = true }
egui_file = { workspace = true, optional = true }
eframe = { workspace = true }
dynamo_common = { version = "*", path = "../common" }
dynamo_core = { version = "*", path = "../core" }
dynamo_profiles = { version = "*", path = "../profiles" }
dynamo_gui = { version = "*", path = "../gui" }
script_loader = { version = "*", path = "../scripting/loader", optional = true }
seq-macro = "0.3.5"
lazy_static = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[features]
serde = ["dynamo_gui/serde"]
scripting = [
  "dep:script_loader",
  "dynamo_gui/scripting",
  "dep:egui_file",
  "dep:lazy_static",
  "dep:toml",
]
