[package]
name = "dynamo_color"
version = "1.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynamo_common = { version = "*", path = "../common" }
serde = { workspace = true, features = ["derive"], optional = true }
image = { workspace = true }
egui = { workspace = true }
rand = "0.9.1"
rand_distr = "0.5.1"
toml = { workspace = true, optional = true }

[features]
serde = ["dep:serde", "dep:toml", "egui/serde", "dynamo_common/serde"]
