[package]
name = "dynamo_common"
version = "0.6.1"
edition = "2021"
authors = ["Danny Stoll <dastoll@umich.edu>"]
description = "A tool for studying discrete time dynamical systems - Utilities and Common Files"
license = "GPL-3.0-or-later"

[build-dependencies]
bindgen = {version = "0.66", optional = true}

[dependencies]
num = ">=0.4"
num-complex = ">=0.4.3"
rayon = ">=1.7.0"
ndarray = ">=0.15.6"
derive_more = { version = "0.99.17", features = ["from", "add", "iterator"] }
libc = {version = "0.2.147", optional = true}
serde = { version = "1.0.166", features = ["derive"], optional = true }
num-rational = "0.4.1"
num-traits = "0.2.16"
lazy_static = "1.4.0"
regex = "1.9.6"
poly_solve = { version = "*", path = "../poly_solve" }
spfunc = "0.1.0"

[features]
serde = ["dep:serde", "num-complex/serde"]
