[package]
name = "dynamo_common"
version = "1.2.0"
edition = "2024"
authors = ["Danny Stoll <dastoll@umich.edu>"]
description = "A tool for studying discrete time dynamical systems - Utilities and Common Files"
license = "GPL-3.0-or-later"

[build-dependencies]
bindgen = { version = "0.72", optional = true }

[dependencies]
num = "0.4"
rayon = { workspace = true }
ndarray = { workspace = true }
derive_more = { workspace = true }
libc = { version = "0.2", optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
num-complex = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
lazy_static = { workspace = true }
regex = "1.12.2"
poly_solve = { version = "*", path = "../poly_solve" }
spfunc = "0.1.3"
directories = "6.0.0"

[features]
serde = ["dep:serde", "num-complex/serde"]
