[package]
name = "dynamo_core"
version = "1.2.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Danny Stoll"]
repository = "https://github.com/dannystoll1/dynamo"
description = "A tool for studying discrete time dynamical systems - Core Files"

[dependencies]
dynamo_common = { version = "*", path = "../common" }
dynamo_color = { version = "*", path = "../coloring" }

rayon = { workspace = true }
thread_local = "1.1"
num_cpus = "1.17"
ndarray = { workspace = true }

num-traits = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "dynamo_common/serde"]
wasm = []
