[package]
name = "dynamo_gui"
version = "1.1.0"
edition = "2024"
authors = ["Danny Stoll"]
repository = "https://github.com/dannystoll1/dynamo"
description = "GUI for Dynamo"
license = "GPL-3.0-or-later"

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
egui = { workspace = true }
epaint = { workspace = true }
egui_extras = { workspace = true, features = ["image"] }
egui_file = { workspace = true }
seq-macro = "0.3.5"
dynamo_core = { version = "*", path = "../core" }
dynamo_color = { version = "*", path = "../coloring", features = ["serde"] }
dynamo_common = { version = "*", path = "../common" }
libloading = { version = "0.8.6", optional = true }
image = { workspace = true }
imageproc = "0.25"
itertools = { workspace = true }

[features]
serde = [
  "dep:serde",
  "epaint/serde",
  "dynamo_core/serde",
  "dynamo_common/serde",
]
scripting = ["dep:libloading"]
