[package]
name = "poly_solve"
version = "0.1.0"
edition = "2021"
authors = ["Danny Stoll <dastoll@umich.edu>"]
description = "An implementation of the Jenkins-Traub polynomial root-finding algorithm"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "0.99.17", features = ["from", "add", "iterator"] }
itertools = "0.11.0"
num-complex = "0.4.4"
num-traits = "0.2.17"
rand = "0.8.5"
