[package]
name = "poly_solve"
version = "0.1.0"
edition = "2021"
authors = ["Danny Stoll <dastoll@umich.edu>"]
description = "An implementation of the Jenkins-Traub polynomial root-finding algorithm"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { workspace = true }
itertools = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
rand = "0.8.5"
