[package]
name = "dynamo_profiles"
version = "1.0.0"
edition = "2021"

[dependencies]
dynamo_common = {version = "*", path = "../common"}
dynamo_core = {version = "*", path = "../core"}
dynamo_color = { version = "*", path = "../coloring" }
num-traits = "0.2.17"
seq-macro = "0.3.5"

[lib]
name = "dynamo_profiles"

[features]
serde = []
