[package]
name = "dynamo_profiles"
version = "1.1.0"
edition = "2024"

[dependencies]
dynamo_common = { version = "*", path = "../common" }
dynamo_core = { version = "*", path = "../core" }
dynamo_color = { version = "*", path = "../coloring" }
num-traits = { workspace = true }
seq-macro = "0.3.6"

[lib]
name = "dynamo_profiles"

[features]
serde = []
