[package]
name = "script_loader"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.23", features = ["full", "auto-initialize"] }
num-complex = { workspace = true, features = ["serde"] }
regex = "1.11.1"
lazy_static = { workspace = true }
libloading = "0.8.6"
dynamo_gui = { version = "*", path = "../../gui", features = ["scripting"] }
dynamo_core = { version = "*", path = "../../core" }
dynamo_common = { version = "*", path = "../../common" }
sha256 = "1.5.0"
