[package]
name = "script_loader"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
pyo3 = { version = "0.25", features = ["full", "auto-initialize"] }
num-complex = { workspace = true, features = ["serde"] }
regex = "1.11.1"
lazy_static = { workspace = true }
libloading = "0.8.7"
dynamo_gui = { version = "*", path = "../../gui", features = ["scripting"] }
dynamo_core = { version = "*", path = "../../core" }
dynamo_common = { version = "*", path = "../../common" }
sha256 = "1.6.0"
