[package]
name = "transpiled-scripts"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
dynamo_gui = { version = "*", path = "../../gui", features = ["scripting"] }
dynamo_core = { version = "*", path = "../../core" }
dynamo_common = { version = "*", path = "../../common" }

